disabled graalvm dependencies